--- a/nerdstyle.css
+++ b/nerdstyle.css
@@ -7,14 +7,14 @@ html, body{
 }
 
 #nerdmatrix {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   pointer-events: none;
-  margin: 0 0;
+  margin: 9% auto 0 auto;
   z-index: 20;
   left: 0;
   -webkit-transform: translateZ(0);
